# hf-spacerini

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt  setup.py
app/: .gitkeep
apps/: .gitkeep
config/: sample_config.yaml  sample_config.yml
docs/: arguments.md
examples/: demo.py  indexing_tutorial.ipynb
examples/configs/: xsum.json
examples/notebooks/: indexing_tutorial.ipynb
examples/scripts/: gradio-demo.py  index-push-pull.py  xsum-demo.py
my-search-engine/: README.md  app.py
src/spacerini/: __init__.py  cli.py  prebuilt.py
src/spacerini/app/: __init__.py  space.py
src/spacerini/data/: __init__.py  load.py
src/spacerini/frontend/: __init__.py  __main__.py  local.py  space.py
src/spacerini/index/: __init__.py  encode.py  index.py  utils.py
src/spacerini/preprocess/: __init__.py  shard.py  tokenize.py  utils.py
src/spacerini/publish/: __init__.py  build_huggingface_space.py  build_space.py  create_app.py  create_space.py  local.py  space.py
src/spacerini/search/: __init__.py  utils.py
src/spacerini/spacerini_utils/: index.py  search.py
templates/gradio/: cookiecutter.json
templates/gradio-vanilla/: cookiecutter.json
templates/gradio/{{ cookiecutter.local_app }}/: .gitattributes  README.md  app.py  requirements.txt
templates/gradio/{{ cookiecutter.module_slug }}/: README.md  requirements.txt
templates/gradio/{{ cookiecutter.space_slug }}/: app.py
templates/gradio_roots_temp/: cookiecutter.json
templates/gradio_roots_temp/{{ cookiecutter.local_app }}/: README.md  app.py
templates/streamlit/: app_.txt
templates/streamlit-vanilla/: cookiecutter.json
templates/streamlit-vanilla/{{ cookiecutter.local_app }}/: README.md  app.py
templates/streamlit/{{ cookiecutter.module_slug }}/: README.md  app.py  packages.txt
tests/: test_index.py
tests/data/: sample_documents.jsonl
